# rosmerta

./: .gitignore  README.md  check_durations.py  check_financial_tags.py  data_models.py  db_config.py  indicators.py  indicators_and_asset_test.py  main.py  market_test.py  pyproject.toml  test_financial_fetch.py
dashboards/: app.py  base.py  registry.py  theme.py
dashboards/assets/: style.css
dashboards/figures/: price.py
dashboards/views/: __init__.py  asset_deep_dive.py  placeholder.py  watchlist_overview.py
db/: ._init.sql  add_watchlists.sql  extend_dividents.sql  init.sql
db_scripts/: basic_price_export.sql  core_expansion_seed.sql  export_tickers.sql  missing_fundamentals.sql  null_audit.csv  seed_dev.sql  small_export.sql  wwatchlist_export.sql
db_scripts/migrations/: migrate_finanancial_columns.sql
dev_test/: check_pfe_gaps.py
price_retrival/: bulk_fetch.py  dividends_api.py  edgar_api.py  ib_api.py  portfolio.py  test_financial_fetch.py
utils/: bars.py
